<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/registration"
            android:textSize="30sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_marginTop="15dp"
            android:height="45dp"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:height="45dp"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_mail"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_number"
            android:drawablePadding="10dp"
            android:height="45dp"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:height="45dp"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:entries="@array/branch"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:id="@+id/branch"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:entries="@array/year"
            android:paddingLeft="12dp"
            android:background="@drawable/shape"
            android:id="@+id/year"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/rg">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/shape"
                android:text="@string/female"/>
        </RadioGroup>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tel"
            android:text="@string/telugu"
            android:layout_marginTop="15dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hin"
            android:text="@string/hindi"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eng"
            android:text="@string/english"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/click_here_to_add_dob"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</ScrollView>